# cpp-cuda-extensions-pytorch

./: README.md
cuda/: CMakeLists.txt
cuda-llvm/: axpy  axpy_device.cu  axpy_host.cu  readme.md
cuda-llvm/device_ir/: axpy_device-cuda-nvptx64-nvidia-cuda-sm_75.ll  axpy_device.ll  axpy_device_opt.ll  axpy_device_opt_readable.ll
cuda-llvm/host_ir/: axpy_host-cuda-nvptx64-nvidia-cuda-sm_35.ll  axpy_host.ll
